:arrow_up: update index.html

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
                     <li>A CloudFront CDN to make this site fast and secure!</li>
                 </ul>
             </p>
+            <p>Automatic Deployment with GitHub Actions - 06/04/2025 </p>
             <p>Want to see how I did it? Check out the <a href="tutorial.html">interactive tutorial</a>!</p>
         </section>
     </main>
