--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
                 </ul>
             </p>
             <p>Automatic Deployment with GitHub Actions - 06/04/2025 </p>
+            <p>Automatic Deployment with GitHub Actions - 06/04/2025  - Test2</p>
             <p>Want to see how I did it? Check out the <a href="tutorial.html">interactive tutorial</a>!</p>
         </section>
     </main>
