✨ Add dev.to Pulumi challenge link to index.html

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html" class="active">Diary</a></li>
                 <li><a href="tutorial.html">Tutorial</a></li>
-                <li><a href="https://dev.to" target="_blank">Dev.to</a></li>
+                <li><a href="https://dev.to/challenges/pulumi" target="_blank">Dev.to</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
     </main>
     
     <footer>
-        <p>© 2025 Veríssimo | Built with <a href="https://www.pulumi.com" target="_blank">Pulumi</a> | More coming soon on <a href="https://dev.to" target="_blank">Dev.to</a></p>
+        <p>© 2025 Veríssimo | Built with <a href="https://www.pulumi.com" target="_blank">Pulumi</a> | More coming soon on <a href="https://dev.to/challenges/pulumi" target="_blank">Dev.to</a></p>
     </footer>
     
     <script src="script.js"></script>
